# mi-visualization

./: .cproject  .lgtm.yml  .project  .travis.yml  CMakeLists.txt  MIVisualizationConfig.cmake.in  MIVisualizationConfigVersion.cmake.in  README.md  a00001.html  a00001.js  a00001_a0921268b4a63c9a271f74ce007a6a7ff_cgraph.map  a00001_a0921268b4a63c9a271f74ce007a6a7ff_cgraph.md5  a00001_a118a8badb750dc7cacb67eebd9bd633b_cgraph.map  a00001_a118a8badb750dc7cacb67eebd9bd633b_cgraph.md5  a00001_a336f76ba316bcbd02d330a616dc4820b_cgraph.map  a00001_a336f76ba316bcbd02d330a616dc4820b_cgraph.md5  a00002.html  a00002.js  a00003.html  a00003.js  a00003_a257a0f30c02036e2897a8cc45cbe98f1_cgraph.map  a00003_a257a0f30c02036e2897a8cc45cbe98f1_cgraph.md5  a00003_ad3fb682978b2724fbc6087322a5aaccf_cgraph.map  a00003_ad3fb682978b2724fbc6087322a5aaccf_cgraph.md5  a00004.html  a00004.js  a00004_a4710b454a3ceb4cf489a4ff674a0691f_cgraph.map  a00004_a4710b454a3ceb4cf489a4ff674a0691f_cgraph.md5  a00004_ac376f000dcded944098ac2ed8013a839_cgraph.map  a00004_ac376f000dcded944098ac2ed8013a839_cgraph.md5  a00005.html  a00005.js  a00005_a3c282f7c2311c91255ff4e1304e90ac9_cgraph.map  a00005_a3c282f7c2311c91255ff4e1304e90ac9_cgraph.md5  a00006.html  a00006.js  a00006_a7b7343b8437adab43701b58f26ed3ce4_cgraph.map  a00006_a7b7343b8437adab43701b58f26ed3ce4_cgraph.md5  a00007.html  a00007.js  (+326 more)
configs/: image_encoder_test.json
scripts/: build_mi_module.sh  download_build_deps.sh  download_release.sh  install_mi_deps.sh  install_mic_deps.sh
src/: CMakeLists.txt
src/opengl/: CMakeLists.txt
src/opengl/application/: CMakeLists.txt  ConsoleOpenGLApplication.cpp  ConsoleOpenGLApplication.hpp  ContinuousLearningApplication.cpp  ContinuousLearningApplication.hpp  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLContinuousLearningApplication.cpp  OpenGLContinuousLearningApplication.hpp  OpenGLEpisodicApplication.cpp  OpenGLEpisodicApplication.hpp  OpenGLTrainThenTestApplication.cpp  OpenGLTrainThenTestApplication.hpp  TrainThenTestApplication.cpp  TrainThenTestApplication.hpp
src/opengl/tests/: CMakeLists.txt  image_encoder_test.cpp  window_grayscale_batch_test.cpp  window_grayscale_image_test.cpp  window_rgb_image_test.cpp
src/opengl/visualization/: CMakeLists.txt  DrawingUtils.cpp  DrawingUtils.hpp  Window.cpp  Window.hpp  WindowChart.cpp  WindowChart.hpp  WindowCollectorChart.hpp  WindowFloatCollectorChart.cpp  WindowFloatCollectorChart.hpp  WindowGrayscaleBatch.cpp  WindowGrayscaleBatch.hpp  WindowImage2D.cpp  WindowImage2D.hpp  WindowMNISTDigit.cpp  WindowMNISTDigit.hpp  WindowManager.cpp  WindowManager.hpp  WindowMatrix2D.cpp  WindowMatrix2D.hpp  WindowMazeOfDigits.cpp  WindowMazeOfDigits.hpp  WindowProbability.cpp  WindowProbability.hpp  WindowRGBTensor.hpp  WindowSequence.cpp  WindowSequence.hpp
